--- a/MyWebsite/Views/Shared/_Layout.cshtml
+++ b/MyWebsite/Views/Shared/_Layout.cshtml
@@ -1,68 +1,52 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - JordynThompson</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>@ViewData["Title"] - JordynThompson</title>
 
-    <link href="~/css/site.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-
-    <environment>
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/js/moment.js"></script>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="~/css/materialize.css" />
-    </environment>
-</head>
+        <environment include="Development">
+            <link href="~/css/site.css" rel="stylesheet" />
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 
 
-<body style="color:#cfd8dc !important; background-color: #080C10;">
-    @*NAVBAR*@
-    <div class="navbar-fixed">
-        <nav class="black">
-            <div class="nav-wrapper" style="margin-left:100px; margin-right: 100px;">
-                <a href="@Url.Action("Index", "Home")" class="brand-logo" style="letter-spacing:2.5px; color:#cfd8dc;">Jordyn</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">ABOUT</a></li>
-                    <li><a asp-area="" asp-controller="Projects" asp-action="Index">PORTFOLIO</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Experience">EXPERIENCE</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    @RenderBody()
-    @RenderSection("Scripts", required: false)
+            <script src="~/lib/jquery/dist/jquery.js"></script>
+            <script src="~/js/moment.js"></script>
+            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+            <link rel="stylesheet" href="~/css/materialize.css"/>
+        </environment>
+        <environment exclude="Development"></environment>
+    </head>
 
+    <body style="color: #cfd8dc !important; background-color: #080C10;">
+        @*NAVBAR*@
+        <div class="navbar-fixed">
+            <nav class="black">
+                <div class="nav-wrapper" style="margin-left: 100px; margin-right: 100px;">
+                    @*<a href="@Url.Action("Index", "Home")" class="brand-logo" style="letter-spacing: 2.5px; color: #cfd8dc;">Jordyn</a>*@
+                    <ul class="right hide-on-med-and-down">
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">ABOUT</a></li>
+                        <li><a asp-area="" asp-controller="Projects" asp-action="Index">PORTFOLIO</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Experience">EXPERIENCE</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        @RenderBody()
+        @RenderSection("Scripts", required: false)
     <footer>
-        <div class="footer-copyright black z-depth-5">
-            <ul id="horizontal-list" class="center">
-                <li style="margin-right:20px;"> © 2018 Jordyn Thompson</li>
-                <li><a style="color:#cfd8dc;" a href="https://www.linkedin.com/in/jordynrachelthompson/" target="_blank"><i class="fab fa-linkedin footer-icon" style="font-size:35px; margin-top: 15px; margin-bottom: 15px;"></i></a></li>
-                <li><a style="color:#cfd8dc;" a href="https://github.com/JordynRachelThompson/" target="_blank"><i class="fab fa-github-square footer-icon" style="font-size:35px; margin-top: 15px; margin-bottom: 15px;"></i></a></li>
-                <li style="margin-left:20px;"><a class="footer-icon" style="color:#cfd8dc;" href="mailto:jordyn@virtualzero.net">jordyn@virtualzero.net</a></li>
+        <div class="footer-copyright black">
+            <ul id="horizontal-list" style="list-style: none;" class="center">
+                <li style="margin-right: 20px;"> © 2018 Jordyn Thompson</li>
+                <li><a style="color: #cfd8dc;" a href="https://www.linkedin.com/in/jordynrachelthompson/" target="_blank"><i class="fab fa-linkedin footer-icon" style="font-size: 35px; margin-top: 15px; margin-bottom: 15px;"></i></a></li>
+                <li><a style="color: #cfd8dc;" a href="https://github.com/JordynRachelThompson/" target="_blank"><i class="fab fa-github-square footer-icon" style="font-size: 35px; margin-top: 15px; margin-bottom: 15px;"></i></a></li>
+                <li style="margin-left: 20px;"><a class="footer-icon" style="color: #cfd8dc;" href="mailto:jordyn@virtualzero.net">jordyn@virtualzero.net</a></li>
             </ul>
         </div>
     </footer>
-</body>
+    </body>
 </html>
 
-<style>
-    ul#horizontal-list {
-        min-width: 700px;
-        list-style: none;
-        vertical-align: middle;
-    }
-
-        ul#horizontal-list li {
-            display: inline;
-            padding: 10px;
-        }
-
-    .footer-icon:hover {
-        color: white;
-    }
-</style>
 
 <environment>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
