--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -6,9 +6,8 @@
 <h3 class="thinHeading" style="margin-top:-650px; margin-bottom: 300px;">.NET DEVELOPER PORTFOLIO</h3>
 @*<h3 style="text-align:center; margin-top: 50px; margin-bottom: 250px; font-weight:200; font-size:30px; letter-spacing:1.5px;">RECENTLY USED TECHNOLOGIES</h3>*@
 
-<div class="container center-div z-depth-5" style="background-color: #101111; margin-top:-200px; margin-bottom:1px; z-index: 100; text-align:center; width:55%; padding:10px;">
+<div class="container center-div z-depth-5" style="background-color: #101111; margin-top:-200px; margin-bottom:1px; z-index: 100; text-align:center; padding:10px;">
     <h4 class="thinHeading" style="margin-top: 10px; margin-bottom: 20px;">Recently Used Technologies</h4>
-
     <ul id="tech-used" class="techBoxes">
         <li>C#</li>
         <li>ASP.NET MVC 5</li>
