--- a/MyWebsite/wwwroot/css/site.css
+++ b/MyWebsite/wwwroot/css/site.css
@@ -1,66 +1,34 @@
-﻿body {
+﻿
+/*LAYOUT*/
+body {
+    background-color: #080C10;
     color: #cfd8dc;
     height: 100%;
     padding: 0;
     margin: 0;
 }
 
-html {
-    height: 100%;
-}
 
-body::after {
-    content: '';
-    display: block;
-    height: 50px; 
-}
+    body::after {
+        content: '';
+        display: block;
+        height: 50px;
+    }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-}
 
 .body-content {
     padding-left: 25px;
     padding-right: 25px;
 }
 
+html {
+    height: 100%;
+}
+
+
 .center-div {
     margin: 0 auto;
     width: 100px;
-}
-
-nav ul li:hover {
-    background-color: black !important;
-}
-
-nav ul a:hover {
-    color: #cfd8dc !important;
-    border: 1px solid #cfd8dc !important;
-}
-
-nav ul a {
-    font-size: 23px !important;
-    margin: 10px !important;
-    letter-spacing: 2.5px !important;
-    color: #cfd8dc !important;
-}
-
-nav {
-    height: 140px !important;
-    padding-top:40px;
-    padding-bottom:40px;
-}
-
-
-.sharpCorners {
-    border-radius: 0px !important;
-}
-
-a {
-    color:#cfd8dc !important;
 }
 
 .textGrey {
@@ -68,6 +36,160 @@ a {
     font-weight: 400;
     letter-spacing: 1.5px;
     font-size: 25px;
+}
+
+
+/*Footer*/
+footer {
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    left: 0;
+}
+
+#horizontal-list li {
+    display: inline;
+    padding: 10px;
+}
+
+.footer-icon {
+    font-size: 30px;
+    margin-top: 15px;
+    margin-right: 13px;
+    padding-bottom: 25px;
+}
+
+    .footer-icon:hover {
+        color: white;
+    }
+
+#copyright {
+    margin-right: 20px;
+    font-size: 15px;
+}
+
+.footer-copyright {
+    margin: 0px !important;
+    bottom: 0;
+}
+
+/*Navbar*/
+
+.mainNav ul li:hover {
+    background-color: black !important;
+}
+
+.mainNav ul a:hover {
+    color: #cfd8dc !important;
+    border: 1px solid #cfd8dc !important;
+}
+
+.mainNav ul a {
+    font-size: 23px !important;
+    margin: 10px !important;
+    letter-spacing: 2.5px !important;
+    color: #cfd8dc !important;
+}
+
+.mainNav {
+    height: 140px !important;
+    padding-top:40px;
+    padding-bottom:40px;
+}
+
+/*Buttons & Text*/
+#buttonInLine {
+    display: inline !important;
+}
+
+.sharpCorners {
+    border-radius: 0px !important;
+}
+
+a {
+    color: #cfd8dc !important;
+}
+
+
+.lightTeal-hover:hover {
+    background-color: #54b798 !important;
+}
+
+.userName {
+    color: #cfd8dc;
+    letter-spacing: 1.5px;
+    font-size: 20px;
+    padding-right: 10px;
+    font-weight: 100 !important;
+    background-color: #080C10 !important;
+}
+
+.hover-underline {
+    cursor: pointer;
+    border-radius: 0px !important;
+    font-weight: bold !important;
+    font-size: 20px !important;
+}
+
+.hover-underline:hover {
+    border-bottom: dotted 1px #cfd8dc;
+}
+
+.black-btn {
+    background-color: #141d26 !important;
+    color: #cfd8dc;
+    font-size: 21px !important;
+    text-decoration: none !important;
+}
+
+.black-btn:hover {
+    background-color: #263442 !important;
+    border: none !important;
+}
+
+.underline-hover {
+    font-weight: bold !important;
+    font-size: 20px !important;
+    border-radius: 0px !important;
+}
+
+.underline-hover:hover {
+    text-decoration: underline;
+}
+
+.add-btn:hover {
+    color: black !important;
+}
+
+#gitHubIcon:hover {
+    color: #cfd8dc !important;
+}
+
+.grey-hover:hover {
+    background-color: #525e78 !important;
+}
+
+.underlineTitle {
+    margin-top: 100px;
+    text-align: center;
+    padding-bottom: 10px;
+    text-decoration: underline
+}
+
+/*HOME*/
+#websiteTitle {
+    margin-top: -750px;
+    margin-bottom: 300px;
+    text-align: center !important;
+}
+
+#skillsContainer {
+    background-color: #11141c;
+    margin-top: -200px;
+    margin-bottom: 1px;
+    text-align: center;
+    padding: 10px;
 }
 
 .parallax img {
@@ -78,6 +200,40 @@ a {
 .parallax {
     height: 80%;
 }
+
+#tech-used {
+    -webkit-column-count: 4;
+    -moz-column-count: 4;
+    column-count: 4;
+    color: #cfd8dc;
+    font-size: 21px;
+}
+
+.thinHeading {
+    font-weight: 200;
+    font-size: 30px;
+    letter-spacing: 1.5px;
+    text-align: center;
+}
+
+.techBoxes li {
+    border: 1px solid white;
+    background-color: #020305;
+    padding: 3px;
+    margin: 5px;
+}
+
+/*Projects*/
+.darkBox {
+    background-color: #020305;
+    margin-top: 50px;
+    text-align: center;
+    width: 75%;
+    padding: 10px;
+    border: .5px solid #cfd8dc;
+}
+
+/*Other*/
 
 .collapsible {
     width: 40%;
@@ -96,9 +252,7 @@ a {
     color: #cfd8dc;
 }
 
-#email:hover {
-    color: white;
-}
+/*Inuts & Dropdowns*/
 
 input[type=email]:not(.browser-default) {
     /*border-bottom: 1px solid #54b798 !important;*/
@@ -149,57 +303,8 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
     color: #D50000 !important;
 }
 
-.lightTeal-hover:hover {
-    background-color: #54b798 !important;
-}
-
-.userName {
-    color: #cfd8dc;
-    letter-spacing: 1.5px;
-    font-size: 20px;
-    padding-right: 10px;
-    font-weight: 100 !important;
-    background-color: #080C10 !important;
-}
-
-#tech-used {
-    -webkit-column-count: 4;
-    -moz-column-count: 4;
-    column-count: 4;
-    color: #cfd8dc;
-    font-size: 21px;
-}
-
-
 .field-validation-error {
     color: #D50000 !important;
-}
-
-.hover-underline {
-    cursor: pointer;
-    border-radius: 0px !important;
-    font-weight: bold !important;
-    font-size: 20px !important;
-}
-
-    .hover-underline:hover {
-        border-bottom: dotted 1px #cfd8dc;
-    }
-
-.black-btn {
-    background-color: #141d26 !important;
-    color: #cfd8dc;
-    font-size: 21px !important;
-    text-decoration: none !important;
-}
-
-    .black-btn:hover {
-        background-color: #263442 !important;
-        border: none !important;
-    }
-
-#buttonInLine {
-    display: inline !important;
 }
 
 .dropdown-content li > a, .dropdown-content li > span {
@@ -242,6 +347,8 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
         text-decoration: underline #54b798;
     }
 
+/*Budget*/
+
 .trashcan-icon{
     color: #cfd8dc !important;
 
@@ -250,29 +357,7 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
     .trashcan-icon:hover {
         color: #54b798 !important;
     }
-
-.underline-hover {
-    font-weight: bold !important;
-    font-size: 20px !important;
-    border-radius: 0px !important;
-}
-
-    .underline-hover:hover {
-        text-decoration: underline;
-    }
-
-    .add-btn:hover {
-        color: black !important;
-    }
-
-    #gitHubIcon:hover {
-        color: #cfd8dc !important;
-    }
-
-    .grey-hover:hover {
-        background-color: #525e78 !important;
-    }
-
+    
 .editBudgetLimitLabel {
     color: #cfd8dc;
     font-size: 25px;
@@ -286,11 +371,6 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
     text-decoration: underline
 }
 
-.partialLoginText {
-    text-align: center;
-    margin-top: 100px;
-    text-align: center;
-}
 
 .grnEditBtn {
     margin-top: 55px;
@@ -307,20 +387,11 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
     text-align: center !important;
 }
 
-.underlineTitle {
+/*Login*/
+.partialLoginText {
+    text-align: center;
     margin-top: 100px;
     text-align: center;
-    padding-bottom: 10px;
-    text-decoration: underline
-}
-
-.darkBox {
-    background-color: #020305;
-    margin-top: 50px;
-    text-align: center;
-    width: 75%;
-    padding: 10px;
-    border: .5px solid #cfd8dc;
 }
 
 .purple-hover {
@@ -379,6 +450,8 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
     margin-top: 5px !important;
 }
 
+/*Weather*/
+
 .weatherBtn {
     border-radius: 50px !important;
     background-color: #141d26 !important;
@@ -424,8 +497,6 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
         outline: none !important;
     }
 
-
-
 .switch label input[type=checkbox]:checked + .lever {
     background-color: #ff7733 !important;
 }
@@ -442,20 +513,6 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
     display: none;
 }
 
-.thinHeading {
-    font-weight: 200;
-    font-size: 30px;
-    letter-spacing: 1.5px;
-    text-align: center;
-}
-
-.techBoxes li{
-    border: 1px solid white;
-    background-color: #020305;
-    padding: 3px;
-    margin: 5px;
-}
-
 #particles-js-snow canvas {
     position: absolute;
     width: 100%;
@@ -468,39 +525,38 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
     height: auto;
 }
 
-.footer-icon:hover {
-    color: white;
-}
-
-#horizontal-list li {
-    display: inline;
-    padding: 10px;
-}
-
-footer {
-    position:fixed;
-    bottom:25px;
-    left:0;
-}
-
+/*MOBILE*/
 @media only screen and (max-width: 750px)  {
+    /*Homepage*/
+    #websiteTitle { margin-top: -850px; }
      #tech-used {
          -webkit-column-count: 1;
          -moz-column-count: 1;
          column-count: 1;
          font-size: 19px;
-         width: 70%;
+         width: 40%;
          margin: auto;
      }
+    #skillsContainer { margin-bottom: 50px; }
+    #tech-used li { margin: 15px; }
+    /*Footer*/
+    .footer-icon { font-size: 18px !important; }
+    #copyright { font-size: 13px !important; }
+    footer { height: 60px; }
+    #horizontal-list li { padding: 2px; }
  }
+
 @media only screen and (max-width: 1200px) and (min-width:750px) {
      #tech-used {
          -webkit-column-count: 2;
          -moz-column-count: 2;
          column-count: 2;
          font-size: 19px;
+         width: 80%;
+         margin: auto;
      }
  }
+
 @media only screen and (max-width: 1500px) and (min-width:1200px) {
      #tech-used {
          -webkit-column-count: 3;
